tests/paczka1/fuzzy1/88065541.err
Error in line 6: HWHF1BS6 A367 40,9
Error in line 7: A222 A367 31,6
Error in line 5: s6V A887 75,8
Error in line 17: s6V S288 95,7
Error in line 21: s6V A367 51,2
Error in line 29: etcU A222 67,8
